--- a/android/app/src/main/res/layout/activity_academician_login.xml
+++ b/android/app/src/main/res/layout/activity_academician_login.xml
@@ -105,6 +105,7 @@
             android:textColor="#000000"
             android:textColorHint="#999999"
             android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +113,7 @@
 
         <Button
             android:id="@+id/btnSignIn"
-            android:layout_width="270dp"
+            android:layout_width="280dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
@@ -135,7 +136,7 @@
 
         <Button
             android:id="@+id/btnBack"
-            android:layout_width="270dp"
+            android:layout_width="280dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_marginVertical="12dp"
