--- a/android/app/src/main/res/layout/activity_academician.xml
+++ b/android/app/src/main/res/layout/activity_academician.xml
@@ -28,6 +28,14 @@
             app:strokeColor="@android:color/transparent"
             app:strokeWidth="0dp">
 
+            <ImageView
+                android:onClick="goToBack"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_gravity="center_vertical"
+                app:srcCompat="@drawable/baseline_arrow_back_ios_24"
+                tools:ignore="OnClick" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -167,7 +175,9 @@
             app:strokeColor="@android:color/transparent"
             app:cardBackgroundColor="@android:color/white"
             app:cardCornerRadius="16dp"
-            app:cardElevation="2dp">
+            app:cardElevation="2dp"
+            android:onClick="contactInfo"
+            tools:ignore="OnClick">
 
             <LinearLayout
                 android:layout_width="match_parent"
