--- a/android/app/src/main/res/layout/activity_personal_info.xml
+++ b/android/app/src/main/res/layout/activity_personal_info.xml
@@ -26,11 +26,11 @@
 
 
         <ImageView
-            android:onClick="goToBack"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginStart="20dp"
             android:layout_gravity="center_vertical"
+            android:layout_marginStart="20dp"
+            android:onClick="goToBack"
             app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
 
         <TextView
@@ -46,132 +46,152 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-    <!--Main-->
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="150dp"
-        android:layout_marginBottom="252dp"
-        android:orientation="vertical"
+    <!--ScrollView-->
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/materialCardView">
+        app:layout_constraintTop_toBottomOf="@id/materialCardView">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="275dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
-            android:layout_marginStart="27dp"
-            android:layout_marginEnd="169dp"
-            android:text="Adınızı ve Soyadınızı giriniz"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/personName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
+            android:gravity="top"
+            android:orientation="vertical"
+            android:paddingTop="16dp"
+            android:paddingBottom="32dp">
+            <!--Main-->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="70dp"
+                android:layout_marginBottom="50dp"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/materialCardView">
 
-        <EditText
-            android:id="@+id/personName"
-            android:layout_width="360dp"
-            android:layout_height="54dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="31dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="19dp"
-            android:background="@drawable/edittext_bg"
-            android:hint="Adınız"
-            android:inputType="textPersonName"
-            android:padding="12dp"
-            android:textColor="#000000"
-            android:textColorHint="#999999"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/personSurname"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="275dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="10dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="169dp"
+                    android:text="Adınızı ve Soyadınızı giriniz"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@+id/personName"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
 
-        <EditText
-            android:id="@+id/personSurname"
-            android:layout_width="360dp"
-            android:layout_height="54dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="31dp"
-            android:layout_marginEnd="30dp"
-            android:background="@drawable/edittext_bg"
-            android:hint="Soyadınız"
-            android:inputType="textPersonName"
-            android:padding="12dp"
-            android:textColor="#000000"
-            android:textColorHint="#999999"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="276dp" />
+                <EditText
+                    android:id="@+id/personName"
+                    android:layout_width="360dp"
+                    android:layout_height="54dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="31dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="30dp"
+                    android:layout_marginBottom="19dp"
+                    android:background="@drawable/edittext_bg"
+                    android:hint="Adınız"
+                    android:inputType="textPersonName"
+                    android:padding="12dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#999999"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@+id/personSurname"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="27dp"
-            android:layout_marginTop="20dp"
-            android:text="Ünvanınızı Seçiniz"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="365dp" />
+                <EditText
+                    android:id="@+id/personSurname"
+                    android:layout_width="360dp"
+                    android:layout_height="54dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="31dp"
+                    android:layout_marginEnd="30dp"
+                    android:background="@drawable/edittext_bg"
+                    android:hint="Soyadınız"
+                    android:inputType="textPersonName"
+                    android:padding="12dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#999999"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:layout_editor_absoluteY="276dp" />
 
-        <AutoCompleteTextView
-            android:id="@+id/unvanDropdown"
-            android:layout_width="360dp"
-            android:layout_height="55dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="12dp"
-            android:background="@drawable/edittext_bg"
-            android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:clickable="true"
-            android:hint="Ünvan Seçiniz"
-            android:inputType="none"
-            android:padding="12dp"
-            android:textColor="#000000"
-            android:textColorHint="#999999"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="20dp"
+                    android:text="Ünvanınızı Seçiniz"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:layout_editor_absoluteY="365dp" />
 
-        <Button
-            android:id="@+id/btnPerInfo"
-            android:layout_width="360dp"
-            android:layout_height="55dp"
-            android:layout_gravity="center"
-            android:layout_marginVertical="20dp"
-            android:backgroundTint="#1A9AAF"
-            android:elevation="8dp"
-            android:fontFamily="monospace"
-            android:onClick="personalSave"
-            android:text="Kaydet"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:translationZ="4dp"
-            app:cornerRadius="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="OnClick"
-            tools:layout_editor_absoluteY="368dp" />
+                <AutoCompleteTextView
+                    android:id="@+id/unvanDropdown"
+                    android:layout_width="360dp"
+                    android:layout_height="55dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="12dp"
+                    android:background="@drawable/edittext_bg"
+                    android:clickable="true"
+                    android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:hint="Ünvan Seçiniz"
+                    android:inputType="none"
+                    android:padding="12dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#999999"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/btnPerInfo"
+                    android:layout_width="360dp"
+                    android:layout_height="55dp"
+                    android:layout_gravity="center"
+                    android:layout_marginVertical="20dp"
+                    android:backgroundTint="#1A9AAF"
+                    android:elevation="8dp"
+                    android:fontFamily="monospace"
+                    android:onClick="personalSave"
+                    android:text="Kaydet"
+                    android:textColor="#FFFFFF"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:translationZ="4dp"
+                    app:cornerRadius="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:ignore="OnClick"
+                    tools:layout_editor_absoluteY="368dp" />
 
 
-    </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
