--- a/android/app/src/main/res/layout/activity_firm_info.xml
+++ b/android/app/src/main/res/layout/activity_firm_info.xml
@@ -137,9 +137,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="10dp"
+                    android:layout_marginVertical="7dp"
                     android:text="Firma Bilgilerim"
-                    android:textSize="22sp"/>
+                    android:textColor="#000000"
+                    android:textSize="18sp"/>
 
                 <LinearLayout
                     android:id="@+id/firmContainer"
