--- a/android/app/src/main/res/layout/activity_academician_login.xml
+++ b/android/app/src/main/res/layout/activity_academician_login.xml
@@ -104,7 +104,7 @@
             android:textColor="#000000"
             android:textColorHint="#999999"
             android:textSize="16sp"
-            android:textStyle="bold"
+            android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
