--- a/android/app/src/main/res/layout/activity_contact_info.xml
+++ b/android/app/src/main/res/layout/activity_contact_info.xml
@@ -102,7 +102,7 @@
                     android:textColor="#000000"
                     android:textColorHint="#999999"
                     android:textSize="16sp"
-                    android:textStyle="bold"
+                    android:textStyle="normal"
                     tools:layout_editor_absoluteX="35dp"
                     tools:layout_editor_absoluteY="211dp" />
 
@@ -119,7 +119,7 @@
                     android:textColor="#000000"
                     android:textColorHint="#999999"
                     android:textSize="16sp"
-                    android:textStyle="bold"
+                    android:textStyle="normal"
                     tools:layout_editor_absoluteX="35dp"
                     tools:layout_editor_absoluteY="211dp" />
 
@@ -136,7 +136,7 @@
                     android:textColor="#000000"
                     android:textColorHint="#999999"
                     android:textSize="16sp"
-                    android:textStyle="bold"
+                    android:textStyle="normal"
                     tools:layout_editor_absoluteX="35dp"
                     tools:layout_editor_absoluteY="211dp" />
 
@@ -165,7 +165,7 @@
                         android:textColor="#000000"
                         android:textColorHint="#999999"
                         android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textStyle="normal" />
 
                     <AutoCompleteTextView
                         android:id="@+id/district"
@@ -184,7 +184,7 @@
                         android:textColor="#000000"
                         android:textColorHint="#999999"
                         android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textStyle="normal" />
                 </LinearLayout>
 
 
