--- a/android/app/src/main/res/layout/activity_firm_info.xml
+++ b/android/app/src/main/res/layout/activity_firm_info.xml
@@ -91,7 +91,7 @@
                     android:textColor="#000000"
                     android:textColorHint="#999999"
                     android:textSize="16sp"
-                    android:textStyle="bold"
+                    android:textStyle="normal"
                     tools:layout_editor_absoluteX="35dp"
                     tools:layout_editor_absoluteY="211dp" />
 
@@ -108,7 +108,7 @@
                     android:textColor="#000000"
                     android:textColorHint="#999999"
                     android:textSize="16sp"
-                    android:textStyle="bold"
+                    android:textStyle="normal"
                     tools:layout_editor_absoluteX="35dp"
                     tools:layout_editor_absoluteY="211dp" />
 
