--- a/android/app/src/main/res/layout/activity_academician.xml
+++ b/android/app/src/main/res/layout/activity_academician.xml
@@ -403,8 +403,10 @@
             app:cardBackgroundColor="@android:color/white"
             app:cardCornerRadius="16dp"
             app:cardElevation="2dp"
+            android:onClick="professionInfo"
             app:strokeColor="@android:color/transparent"
-            app:strokeWidth="0dp">
+            app:strokeWidth="0dp"
+            tools:ignore="OnClick">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -435,6 +437,7 @@
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
+
         <!--Verebileceği Danışmanlık Konuları-->
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
@@ -442,11 +445,13 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
+            android:onClick="consultancyInfo"
             app:cardBackgroundColor="@android:color/white"
             app:cardCornerRadius="16dp"
             app:cardElevation="2dp"
             app:strokeColor="@android:color/transparent"
-            app:strokeWidth="0dp">
+            app:strokeWidth="0dp"
+            tools:ignore="OnClick">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -476,6 +481,13 @@
                     app:srcCompat="@drawable/baseline_arrow_forward_ios_24" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
+
+
+
+
+
+
+
 
 
         <!--Daha Önceki Danışmanlıklar-->
