profession info xml updated

--- a/android/app/src/main/res/layout/activity_profession_info.xml
+++ b/android/app/src/main/res/layout/activity_profession_info.xml
@@ -105,7 +105,8 @@
                     android:textStyle="normal"
                     android:inputType="textMultiLine"
                     android:gravity="start|top"
-                    android:hint="Uzmanlık Alanlarınızı giriniz"/>
+                    android:hint="Uzmanlık Alanlarınızı giriniz"
+                    android:textColorHint="#999999"/>
 
 
 
