--- a/android/app/src/main/res/layout/activity_profession_info.xml
+++ b/android/app/src/main/res/layout/activity_profession_info.xml
@@ -14,7 +14,7 @@
         android:id="@+id/materialCardView2"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        app:cardBackgroundColor="@android:color/white"
+        app:cardBackgroundColor="#1A9AAF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
             android:layout_margin="12dp"
             android:gravity="center"
             android:text="Uzmanlık Alanları"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:textSize="15sp"
             android:textStyle="bold" />
 
