--- a/android/app/src/main/res/layout/activity_personal_info.xml
+++ b/android/app/src/main/res/layout/activity_personal_info.xml
@@ -84,7 +84,7 @@
                     android:layout_marginEnd="169dp"
                     android:text="Adınızı ve Soyadınızı giriniz"
                     android:textColor="#000000"
-                    android:textSize="16sp"
+                    android:textSize="17sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/personName"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -137,9 +137,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="20dp"
-                    android:text="Ünvanınızı Seçiniz"
+                    android:text="Unvanınızı Seçiniz"
                     android:textColor="#000000"
-                    android:textSize="16sp"
+                    android:textSize="17sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     tools:layout_editor_absoluteY="365dp" />
